# rust_test

./: .env  Cargo.toml  node.js
src/: main.rs
