[package]
name = "mptools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["full"] }
reqwest = "0.11.14"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
